////////////////////// e2sm-rmet-ies.proto //////////////////////
// Protobuf generated from /e2sm-rmet.asn1 by asn1c-0.9.29
// E2SM-RMET-IEs { iso(1) identified-organization(3) dod(6) internet(1) private(4) enterprise(1) oran(53148) e2(1) version2(2) e2sm(2) e2sm-RMETMON-IEs(2) }

syntax = "proto3";

package e2sm_rmet.v1;
option go_package = "github.com/AbdouTlili/onos-e2-sm/servicemodels/e2sm_rmet/v1/e2sm-rmet-go";

import "validate/v1/validate.proto";
import "asn1/v1/asn1.proto";

// sequence from e2sm-rmet.asn1:24
// {EUTRACGI}
message Eutracgi {
    PlmnIdentity p_lmn_identity = 1 [ json_name="pLMN-Identity"];
    EutracellIdentity e_utracell_identity = 2 [ json_name="eUTRACellIdentity"];
};

// sequence from e2sm-rmet.asn1:30
// {NRCGI}
message Nrcgi {
    PlmnIdentity p_lmn_identity = 1 [ json_name="pLMN-Identity"];
    NrcellIdentity n_rcell_identity = 2 [ json_name="nRCellIdentity"];
};

// sequence from e2sm-rmet.asn1:36
// {CellGlobalID}
message CellGlobalId {
    // choice from e2sm-rmet.asn1:36
    oneof cell_global_id {
        // @inject_tag: aper:"choiceIdx:1,valueExt"
        Nrcgi nr_cgi = 1 [ json_name="nr-CGI"];
        // @inject_tag: aper:"choiceIdx:2,valueExt"
        Eutracgi e_utra_cgi = 2 [ json_name="eUTRA-CGI"];
    }
};

// sequence from e2sm-rmet.asn1:42
// {SNSSAI}
message Snssai {
    // @inject_tag: aper:"sizeLB:1,sizeUB:1"
    bytes s_st = 1 [(validate.v1.rules).bytes.len = 1, json_name="sST"];
    // @inject_tag: aper:"optional,sizeLB:3,sizeUB:3"
    optional bytes s_d = 2 [(validate.v1.rules).bytes.len = 3, json_name="sD"];
};

// range of Integer from e2sm-rmet.asn1:47
// {FiveQI}
message FiveQi {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:255"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:49
// {QCI}
message Qci {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:255"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:51
// {ARP}
message Arp {
    // @inject_tag: aper:"valueExt,valueLB:1,valueUB:15"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 1, lte: 15}, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:61
// {GranularityPeriod}
message GranularityPeriod {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 1, lte: 4294967295}, json_name="value"];
};

// sequence from e2sm-rmet.asn1:62
// {MeasurementType}
message MeasurementType {
    // choice from e2sm-rmet.asn1:62
    oneof measurement_type {
        // @inject_tag: aper:"choiceIdx:1"
        MeasurementTypeName meas_name = 1 [ json_name="measName"];
        // @inject_tag: aper:"choiceIdx:2"
        MeasurementTypeId meas_id = 2 [ json_name="measID"];
    }
};

// range of Integer from e2sm-rmet.asn1:69
// {MeasurementTypeID}
message MeasurementTypeId {
    // @inject_tag: aper:"valueExt,valueLB:1,valueUB:65536"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 1, lte: 65536}, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:71
// {SubscriptionID}
message SubscriptionId {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 1, lte: 4294967295}, json_name="value"];
};

// sequence from e2sm-rmet.asn1:76
// {GlobalRMETnode-ID}
message GlobalRmetnodeId {
    // choice from e2sm-rmet.asn1:76
    oneof global_rmetnode_id {
        // @inject_tag: aper:"choiceIdx:1,valueExt"
        GlobalRmetnodeGnbId g_nb = 1 [ json_name="gNB"];
        // @inject_tag: aper:"choiceIdx:2,valueExt"
        GlobalRmetnodeEnGnbId en_g_nb = 2 [ json_name="en-gNB"];
        // @inject_tag: aper:"choiceIdx:3,valueExt"
        GlobalRmetnodeNgEnbId ng_e_nb = 3 [ json_name="ng-eNB"];
        // @inject_tag: aper:"choiceIdx:4,valueExt"
        GlobalRmetnodeEnbId e_nb = 4 [ json_name="eNB"];
    }
};

// sequence from e2sm-rmet.asn1:84
// {GlobalRMETnode-gNB-ID}
message GlobalRmetnodeGnbId {
    // @inject_tag: aper:"valueExt"
    GlobalgNbId global_g_nb_id = 1 [ json_name="global-gNB-ID"];
    // @inject_tag: aper:"optional"
    optional GnbCuUpId g_nb_cu_up_id = 2 [ json_name="gNB-CU-UP-ID"];
    // @inject_tag: aper:"optional"
    optional GnbDuId g_nb_du_id = 3 [ json_name="gNB-DU-ID"];
};

// sequence from e2sm-rmet.asn1:91
// {GlobalgNB-ID}
message GlobalgNbId {
    PlmnIdentity plmn_id = 1 [ json_name="plmn-id"];
    // @inject_tag: aper:"choiceExt"
    GnbIdChoice gnb_id = 2 [ json_name="gnb-id"];
};

// range of Integer from e2sm-rmet.asn1:96
// {GNB-CU-UP-ID}
message GnbCuUpId {
    // @inject_tag: aper:"valueLB:0,valueUB:68719476735"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 0, lte: 68719476735}, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:98
// {GNB-DU-ID}
message GnbDuId {
    // @inject_tag: aper:"valueLB:0,valueUB:68719476735"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 0, lte: 68719476735}, json_name="value"];
};

// sequence from e2sm-rmet.asn1:101
// {GNB-ID-Choice}
message GnbIdChoice {
    // choice from e2sm-rmet.asn1:101
    oneof gnb_id_choice {
        // @inject_tag: aper:"choiceIdx:1,sizeLB:22,sizeUB:32"
        asn1.v1.BitString gnb_id = 1 [ json_name="gnb-ID"];
    }
};

// sequence from e2sm-rmet.asn1:106
// {GlobalRMETnode-en-gNB-ID}
message GlobalRmetnodeEnGnbId {
    // @inject_tag: aper:"valueExt"
    GlobalenGnbId global_g_nb_id = 1 [ json_name="global-gNB-ID"];
    // @inject_tag: aper:"optional"
    optional GnbCuUpId g_nb_cu_up_id = 2 [ json_name="gNB-CU-UP-ID"];
    // @inject_tag: aper:"optional"
    optional GnbDuId g_nb_du_id = 3 [ json_name="gNB-DU-ID"];
};

// sequence from e2sm-rmet.asn1:113
// {GlobalenGNB-ID}
message GlobalenGnbId {
    PlmnIdentity p_lmn_identity = 1 [ json_name="pLMN-Identity"];
    // @inject_tag: aper:"choiceExt"
    EngnbId g_nb_id = 2 [ json_name="gNB-ID"];
};

// sequence from e2sm-rmet.asn1:119
// {ENGNB-ID}
message EngnbId {
    // choice from e2sm-rmet.asn1:119
    oneof engnb_id {
        // @inject_tag: aper:"choiceIdx:1,sizeLB:22,sizeUB:32"
        asn1.v1.BitString g_nb_id = 1 [ json_name="gNB-ID"];
    }
};

// sequence from e2sm-rmet.asn1:124
// {GlobalRMETnode-ng-eNB-ID}
message GlobalRmetnodeNgEnbId {
    // @inject_tag: aper:"valueExt"
    GlobalngeNbId global_ng_e_nb_id = 1 [ json_name="global-ng-eNB-ID"];
    // @inject_tag: aper:"optional"
    optional GnbDuId g_nb_du_id = 2 [ json_name="gNB-DU-ID"];
};

// sequence from e2sm-rmet.asn1:130
// {GlobalngeNB-ID}
message GlobalngeNbId {
    PlmnIdentity plmn_id = 1 [ json_name="plmn-id"];
    // @inject_tag: aper:"choiceExt"
    EnbIdChoice enb_id = 2 [ json_name="enb-id"];
    // @inject_tag: aper:"sizeLB:18,sizeUB:18"
    asn1.v1.BitString short_macro_e_nb_id = 3 [ json_name="short-Macro-eNB-ID"];
    // @inject_tag: aper:"sizeLB:21,sizeUB:21"
    asn1.v1.BitString long_macro_e_nb_id = 4 [ json_name="long-Macro-eNB-ID"];
};

// sequence from e2sm-rmet.asn1:138
// {ENB-ID-Choice}
message EnbIdChoice {
    // choice from e2sm-rmet.asn1:138
    oneof enb_id_choice {
        // @inject_tag: aper:"choiceIdx:1,sizeLB:20,sizeUB:20"
        asn1.v1.BitString enb_id_macro = 1 [ json_name="enb-ID-macro"];
        // @inject_tag: aper:"choiceIdx:2,sizeLB:18,sizeUB:18"
        asn1.v1.BitString enb_id_shortmacro = 2 [ json_name="enb-ID-shortmacro"];
        // @inject_tag: aper:"choiceIdx:3,sizeLB:21,sizeUB:21"
        asn1.v1.BitString enb_id_longmacro = 3 [ json_name="enb-ID-longmacro"];
    }
};

// sequence from e2sm-rmet.asn1:145
// {GlobalRMETnode-eNB-ID}
message GlobalRmetnodeEnbId {
    // @inject_tag: aper:"valueExt"
    GlobalEnbId global_e_nb_id = 1 [ json_name="global-eNB-ID"];
};

// sequence from e2sm-rmet.asn1:150
// {GlobalENB-ID}
message GlobalEnbId {
    PlmnIdentity p_lmn_identity = 1 [ json_name="pLMN-Identity"];
    // @inject_tag: aper:"choiceExt"
    EnbId e_nb_id = 2 [ json_name="eNB-ID"];
};

// sequence from e2sm-rmet.asn1:156
// {ENB-ID}
message EnbId {
    // choice from e2sm-rmet.asn1:156
    oneof enb_id {
        // @inject_tag: aper:"choiceIdx:1,sizeLB:20,sizeUB:20"
        asn1.v1.BitString macro_e_nb_id = 1 [ json_name="macro-eNB-ID"];
        // @inject_tag: aper:"choiceIdx:2,sizeExt,sizeLB:28,sizeUB:28"
        asn1.v1.BitString home_e_nb_id = 2 [ json_name="home-eNB-ID"];
    }
};

// sequence from e2sm-rmet.asn1:164
// {RANfunction-Name}
message RanfunctionName {
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150"
    string ran_function_short_name = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="ranFunction-ShortName"];
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:1000"
    string ran_function_e2_sm_oid = 2 [(validate.v1.rules).string = {min_len: 1, max_len: 1000}, json_name="ranFunction-E2SM-OID"];
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150"
    string ran_function_description = 3 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="ranFunction-Description"];
    // @inject_tag: aper:"optional,valueExt,valueLB:0,valueUB:255"
    optional int32 ran_function_instance = 4 [ json_name="ranFunction-Instance"];
};

// range of Integer from e2sm-rmet.asn1:173
// {RIC-Style-Type}
message RicStyleType {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:255"
    int32 value = 1 [ (validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:181
// {RIC-Format-Type}
message RicFormatType {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:255"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:181
// {-}
message MaxnoofRmetnodes {
    // @inject_tag: aper:"valueLB:1024,valueUB:1024,"
    int32 value = 1 [(validate.v1.rules).int32.const = 1024, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:182
// {-}
message MaxnoofCells {
    // @inject_tag: aper:"valueLB:16384,valueUB:16384,"
    int32 value = 1 [(validate.v1.rules).int32.const = 16384, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:183
// {-}
message MaxnoofRicstyles {
    // @inject_tag: aper:"valueLB:63,valueUB:63,"
    int32 value = 1 [(validate.v1.rules).int32.const = 63, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:184
// {-}
message MaxnoofMeasurementInfo {
    // @inject_tag: aper:"valueLB:65536,valueUB:65536,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65536, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:185
// {-}
message MaxnoofMeasurementRecord {
    // @inject_tag: aper:"valueLB:65536,valueUB:65536,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65536, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:186
// {-}
message MaxnoofMeasurementValue {
    // @inject_tag: aper:"valueLB:2147483647,valueUB:2147483647,"
    int32 value = 1 [(validate.v1.rules).int32.const = 2147483647, json_name="value"];
};

// constant Integer from e2sm-rmet.asn1:191
// {-}
message MaxofUe {
    // @inject_tag: aper:"valueLB:65536,valueUB:65536,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65536, json_name="value"];
};

// range of Integer from e2sm-rmet.asn1:193
// {UEID}
message Ueid {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 1, lte: 4294967295}, json_name="value"];
};

// sequence from e2sm-rmet.asn1:198
// {UEItem}
message Ueitem {
    Ueid ue_id = 1 [ json_name="ueID"];
    // @inject_tag: aper:"optional"
    optional Uetag ue_tag = 2 [ json_name="ueTag"];
};

// sequence from e2sm-rmet.asn1:207
// {UEList}
message Uelist {
    // @inject_tag: aper:"valueExt,sizeLB:1,sizeUB:65535"
    repeated Ueitem value = 1 [ json_name="value"];
};

// sequence from e2sm-rmet.asn1:209
// {MeasurementInfoList}
message MeasurementInfoList {
    // @inject_tag: aper:"valueExt,sizeLB:1,sizeUB:65535"
    repeated MeasurementInfoItem value = 1 [ json_name="value"];
};

// sequence from e2sm-rmet.asn1:210
// {MeasurementInfoItem}
message MeasurementInfoItem {
    // @inject_tag: aper:"choiceExt"
    MeasurementType meas_type = 1 [ json_name="measType"];
};

// sequence from e2sm-rmet.asn1:217
// {MeasurementData}
message MeasurementData {
    // @inject_tag: aper:"valueExt,sizeLB:1,sizeUB:65535"
    repeated MeasurementRecord value = 1 [ json_name="value"];
};

// sequence from e2sm-rmet.asn1:218
// {MeasurementRecord}
message MeasurementRecord {
    Ueid ue_id = 1 [ json_name="ueID"];
    Uetag ue_tag = 2 [ json_name="ueTag"];
    // @inject_tag: aper:"choiceExt,sizeLB:1,sizeUB:1024"
    repeated MeasurementRecordItem meas_record_item = 3 [ json_name="measRecordItem"];
};

// sequence from e2sm-rmet.asn1:231
// {MeasurementRecordItem}
message MeasurementRecordItem {
    // choice from e2sm_kpm_v2.0.3-radisys.asn:279
    oneof measurement_record_item {
        // @inject_tag: aper:"choiceIdx:1,valueLB:0,valueUB:4294967295"
        int64 integer = 1 [json_name = "integer"];
        // @inject_tag: aper:"choiceIdx:2"
        double real = 2 [json_name = "real"];
        // @inject_tag: aper:"choiceIdx:3,valueLB:0,valueUB:0"
        int32 no_value = 3 [json_name = "noValue"];
    }
};

// sequence from e2sm-rmet.asn1:236
// {MeasurementInfo-Action-List}
message MeasurementInfoActionList {
    // @inject_tag: aper:"valueExt,sizeLB:1,sizeUB:65535"
    repeated MeasurementInfoActionItem value = 1 [ json_name="value"];
};

// sequence from e2sm-rmet.asn1:237
// {MeasurementInfo-Action-Item}
message MeasurementInfoActionItem {
    MeasurementTypeName meas_name = 1 [ json_name="measName"];
    // @inject_tag: aper:"optional"
    optional MeasurementTypeId meas_id = 2 [ json_name="measID"];
};

// sequence from e2sm-rmet.asn1:254
// {E2SM-RMET-EventTriggerDefinition}
message E2SmRmetEventTriggerDefinition {
    // @inject_tag: aper:"choiceExt"
    EventTriggerDefinitionFormats event_definition_formats = 1 [ json_name="eventDefinition-formats"];
};


message EventTriggerDefinitionFormats {
    oneof e2_sm_rmet_event_trigger_definition {
        // @inject_tag: aper:"choiceIdx:1,valueExt"
        E2SmRmetEventTriggerDefinitionFormat1 event_definition_format1 = 1 [json_name = "eventDefinition_Format1"];
    }
}


// sequence from e2sm-rmet.asn1:259
// {E2SM-RMET-EventTriggerDefinition-Format1}
message E2SmRmetEventTriggerDefinitionFormat1 {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295"
    int64 reporting_period = 1 [json_name = "reportingPeriod"];
};




// sequence from e2sm-rmet.asn1:268
// {E2SM-RMET-ActionDefinition}
message E2SmRmetActionDefinition {
    RicStyleType ric_style_type = 1 [ json_name="ric-Style-Type"];
    // @inject_tag: aper:"choiceExt"
    ActionDefinitionFormats action_definition_formats = 2 [json_name = "actionDefinition-formats"];
};


message ActionDefinitionFormats {
    oneof e2_sm_rmet_action_definition {
        // @inject_tag: aper:"valueExt,choiceIdx:1"
        E2SmRmetActionDefinitionFormat1 action_definition_format1 = 2 [json_name = "actionDefinition_Format1"];
    }
}

// sequence from e2sm-rmet.asn1:277
// {E2SM-RMET-ActionDefinition-Format1}
message E2SmRmetActionDefinitionFormat1 {
    CellObjectId cell_obj_id = 1 [ json_name="cellObjID"];
    MeasurementInfoList meas_info_list = 2 [ json_name="measInfoList"];
    GranularityPeriod granul_period = 3 [ json_name="granulPeriod"];
    SubscriptionId subscript_id = 4 [ json_name="subscriptID"];
};

// sequence from e2sm-rmet.asn1:292
// {E2SM-RMET-IndicationHeader}
message E2SmRmetIndicationHeader {
    // @inject_tag: aper:"choiceExt"
    IndicationHeaderFormats indication_header_formats = 1 [json_name = "indicationHeader-formats"];
};

message IndicationHeaderFormats {
    oneof e2_sm_rmet_indication_header {
        // @inject_tag: aper:"valueExt,choiceIdx:1"
        E2SmRmetIndicationHeaderFormat1 indication_header_format1 = 1 [json_name = "indicationHeader_Format1"];
    }
}


// sequence from e2sm-rmet.asn1:297
// {E2SM-RMET-IndicationHeader-Format1}
message E2SmRmetIndicationHeaderFormat1 {
    TimeStamp collet_start_time = 1 [ json_name="colletStartTime"];
    // @inject_tag: aper:"optional,sizeExt,sizeLB:0,sizeUB:15"
    optional string file_formatversion = 2 [(validate.v1.rules).string = {min_len: 0, max_len: 15}, json_name="fileFormatversion"];
    // @inject_tag: aper:"optional,sizeExt,sizeLB:0,sizeUB:400"
    optional string sender_name = 3 [(validate.v1.rules).string = {min_len: 0, max_len: 400}, json_name="senderName"];
    // @inject_tag: aper:"optional,sizeExt,sizeLB:0,sizeUB:8"
    optional string sender_type = 4 [(validate.v1.rules).string = {min_len: 0, max_len: 8}, json_name="senderType"];
    // @inject_tag: aper:"optional,sizeExt,sizeLB:0,sizeUB:32"
    optional string vendor_name = 5 [(validate.v1.rules).string = {min_len: 0, max_len: 32}, json_name="vendorName"];
    // @inject_tag: aper:"optional,choiceExt"
    optional GlobalRmetnodeId rmet_node_id = 6 [ json_name="rmetNodeID"];
};

// sequence from e2sm-rmet.asn1:314
// {E2SM-RMET-IndicationMessage}
message E2SmRmetIndicationMessage {
    // @inject_tag: aper:"choiceExt"
    IndicationMessageFormats indication_message_formats = 1 [json_name = "indicationMessage-formats"];
};

message IndicationMessageFormats {
    oneof e2_sm_rmet_indication_message {
        // @inject_tag: aper:"valueExt,choiceIdx:1"
        E2SmRmetIndicationMessageFormat1 indication_message_format1 = 1 [json_name = "indicationMessage_Format1"];
    }
}

// sequence from e2sm-rmet.asn1:319
// {E2SM-RMET-IndicationMessage-Format1}
message E2SmRmetIndicationMessageFormat1 {
    SubscriptionId subscript_id = 1 [ json_name="subscriptID"];
    // @inject_tag: aper:"optional"
    optional CellObjectId cell_obj_id = 2 [ json_name="cellObjID"];
    // @inject_tag: aper:"optional"
    optional GranularityPeriod granul_period = 3 [ json_name="granulPeriod"];
    // @inject_tag: aper:"optional"
    optional MeasurementInfoList meas_info_list = 4 [ json_name="measInfoList"];
    MeasurementData meas_data = 5 [ json_name="measData"];
};

// sequence from e2sm-rmet.asn1:332
// {E2SM-RMET-RANfunction-Description}
message E2SmRmetRanfunctionDescription {
    // @inject_tag: aper:"valueExt"
    RanfunctionName ran_function_name = 1 [ json_name="ranFunction-Name"];
    // @inject_tag: aper:"optional,valueExt,sizeLB:1,sizeUB:1024"
    repeated RicRmetnodeItem ric_rmet_node_list = 2 [(validate.v1.rules).repeated = {min_items: 1, max_items: 1024}, json_name="ric-RMET-Node-List"];
    // @inject_tag: aper:"optional,valueExt,sizeLB:1,sizeUB:63"
    repeated RicEventTriggerStyleItem ric_event_trigger_style_list = 3 [(validate.v1.rules).repeated = {min_items: 1, max_items: 63}, json_name="ric-EventTriggerStyle-List"];
    // @inject_tag: aper:"optional,valueExt,sizeLB:1,sizeUB:63"
    repeated RicReportStyleItem ric_report_style_list = 4 [(validate.v1.rules).repeated = {min_items: 1, max_items: 63}, json_name="ric-ReportStyle-List"];
};

// sequence from e2sm-rmet.asn1:340
// {RIC-RMETNode-Item}
message RicRmetnodeItem {
    // @inject_tag: aper:"choiceExt"
    GlobalRmetnodeId ric_rmetnode_type = 1 [ json_name="ric-RMETNode-Type"];
    // @inject_tag: aper:"optional,valueExt,sizeLB:1,sizeUB:16384"
    repeated CellMeasurementObjectItem cell_measurement_object_list = 2 [(validate.v1.rules).repeated = {min_items: 1, max_items: 16384}, json_name="cell-Measurement-Object-List"];
};

// sequence from e2sm-rmet.asn1:346
// {Cell-Measurement-Object-Item}
message CellMeasurementObjectItem {
    CellObjectId cell_object_id = 1 [ json_name="cell-object-ID"];
    // @inject_tag: aper:"choiceExt"
    CellGlobalId cell_global_id = 2 [ json_name="cell-global-ID"];
};

// sequence from e2sm-rmet.asn1:352
// {RIC-EventTriggerStyle-Item}
message RicEventTriggerStyleItem {
    RicStyleType ric_event_trigger_style_type = 1 [ json_name="ric-EventTriggerStyle-Type"];
    RicStyleName ric_event_trigger_style_name = 2 [ json_name="ric-EventTriggerStyle-Name"];
    RicFormatType ric_event_trigger_format_type = 3 [ json_name="ric-EventTriggerFormat-Type"];
};

// sequence from e2sm-rmet.asn1:359
// {RIC-ReportStyle-Item}
message RicReportStyleItem {
    RicStyleType ric_report_style_type = 1 [ json_name="ric-ReportStyle-Type"];
    RicStyleName ric_report_style_name = 2 [ json_name="ric-ReportStyle-Name"];
    RicFormatType ric_action_format_type = 3 [ json_name="ric-ActionFormat-Type"];
    MeasurementInfoActionList meas_info_action_list = 4 [ json_name="measInfo-Action-List"];
    RicFormatType ric_indication_header_format_type = 5 [ json_name="ric-IndicationHeaderFormat-Type"];
    RicFormatType ric_indication_message_format_type = 6 [ json_name="ric-IndicationMessageFormat-Type"];
};


//{RIC-Style-Name}
message RicStyleName {
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name = "value"];
}

//{CellObjectID}
message CellObjectId {
    // @inject_tag: aper:"sizeExt,sizeLB:0,sizeUB:400"
    string value = 1 [(validate.v1.rules).string = {min_len: 0, max_len: 400}, json_name = "value"];
}

//{MeasurementTypeName}
message MeasurementTypeName {
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name = "value"];
}

//{UE-Identity}
message UeIdentity {
    bytes value = 1 [json_name = "value"];
}

//{PLMN-Identity}
message PlmnIdentity {
    // @inject_tag: aper:"sizeLB:3,sizeUB:3"
    bytes value = 1 [(validate.v1.rules).bytes.len = 3, json_name = "value"];
}

//{TimeStamp}
message TimeStamp {
    // @inject_tag: aper:"sizeLB:4,sizeUB:4"
    bytes value = 1 [(validate.v1.rules).bytes.len = 4, json_name = "value"];
}

//{EUTRACellIdentity}
message EutracellIdentity {
    // @inject_tag: aper:"sizeLB:28,sizeUB:28"
    asn1.v1.BitString value = 1 [json_name = "value"]; //28
}

//{NRCellIdentity}
message NrcellIdentity {
    // @inject_tag: aper:"sizeLB:36,sizeUB:36"
    asn1.v1.BitString value = 1 [json_name = "value"]; //36
}


//{MeasurementTypeName}
message Uetag {
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name = "value"];
}